# Networking-App-Backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
netbackend/: asgi.py  settings.py  urls.py  wsgi.py
network/: models.py
network/migrations/: 0001_initial.py
services/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_following_request_status.py  0003_profile_reg_no.py  0004_remove_post_image_or_video_remove_profile_reg_no_and_more.py  0005_alter_profile_dept.py  0006_postimage_slug_alter_comment_post_alter_like_post_and_more.py  0007_profile_city_profile_state_alter_following_profile_and_more.py  0008_alter_profile_name.py  0009_remove_interesttag_content_object_and_more.py
